[package]
name = "chat_application"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
once_cell = "1.5"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4"